# NorkaXT

./: .gitignore  COPYING  README.md  meson.build  pyproject.toml
build-aux/: com.tenderowl.norka.json  gtksource.json  python3-modules.json
data/: com.tenderowl.norka.appdata.xml.in  com.tenderowl.norka.desktop.in  com.tenderowl.norka.gresource.xml  com.tenderowl.norka.gschema.xml  com.tenderowl.norka.metainfo.xml.in  com.tenderowl.norka.service.in  general.css  meson.build  norkaxt.gresource.xml  styles.css
data/gtksourceview-5/styles/: norka-dark.xml  norka.xml
data/icons/: meson.build
data/ui/: add_workspace_dialog.blp  content_page.blp  content_view.blp  edit_workspace_dialog.blp  editor_actions_popover.blp  editor_view.blp  folders_list.blp  main_view.blp  note_view_column.blp  notes_list.blp  notes_list_column.blp  pages_tree.blp  pages_tree_row.blp  sidebar.blp  sidebar_column.blp  window.blp  workspace_card.blp  workspace_view.blp
examples/: workspace_example.py
flatpak/: com.tenderowl.norka.json  com.tenderowl.norka.json~
norka/: main.py  window.py
norka/models/: README.md  __init__.py  database.py  page.py  page_node.py  page_tree_item.py  workspace.py  workspace_service.py
norka/services/: __init__.py  page_service.py  workspace_service.py
norka/widgets/: add_workspace_dialog.py  content_page.py  content_view.py  edit_workspace_dialog.py  editor_actions_popover.py  editor_view.py  main_view.py  pages_tree.py  pages_tree_row.py  sidebar.py  workspace_card.py  workspace_view.py
norkaxt/: main.py  window.py
norkaxt/widgets/: content_page.py  folders_list.py  note_view_column.py  notes_list.py  notes_list_column.py  sidebar.py  sidebar_column.py
po/: POTFILES  POTFILES.in  meson.build
subprojects/: blueprint-compiler.wrap
