dir_48 = join_paths('hicolor', '48x48', 'apps')
install_data(
  join_paths(dir_48, ('@0@.png').format(app_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', dir_48)
)

dir_256 = join_paths('hicolor', '256x256', 'apps')
install_data(
  join_paths(dir_256, ('@0@.png').format(app_id)),
  install_dir: join_paths(get_option('datadir'), 'icons', dir_256)
)